--- a/Client-Side-MERN/package.json
+++ b/Client-Side-MERN/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "firebase": "^9.17.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -18,7 +19,8 @@
     "react-simple-star-rating": "^3.0.0",
     "sweetalert": "^2.1.2",
     "swiper": "^7.2.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "proxy": "https://one-stop-shop-api.vercel.app"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
