--- a/Client-Side-MERN/package.json
+++ b/Client-Side-MERN/package.json
@@ -19,8 +19,7 @@
     "react-simple-star-rating": "^3.0.0",
     "sweetalert": "^2.1.2",
     "swiper": "^7.2.0",
-    "web-vitals": "^1.1.2",
-    "proxy": "https://one-stop-shop-api.vercel.app"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
