--- a/Client-Side-MERN/package.json
+++ b/Client-Side-MERN/package.json
@@ -3,27 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/jest-dom": "^6.0.1",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "aos": "^3.0.0-beta.6",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
-    "firebase": "^9.17.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.19.5",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-simple-star-rating": "^3.0.0",
+    "firebase": "^10.2.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
     "sweetalert": "^2.1.2",
-    "swiper": "^7.2.0",
-    "web-vitals": "^1.1.2"
+    "swiper": "^10.2.0",
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
